# BizCode

./: .env.example  .gitguardian.yml  .gitignore  .lycheeignore  .npmrc  AGENTS.md  BizCode.code-workspace  CONTRIBUTING.md  PROGRESS.md  QUALITY_GATES_SETUP.md  README.md  docker-compose.postgres.yml  eslint.config.mjs  index.html  mlc_config.json  package-lock.json  package.json  playwright.config.ts  release.config.cjs  server.ts  tailwind.config.js  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
.github/: CODEOWNERS  PROJECT_SETUP_PHASE1.md  automation-final.md  automation-smoke.md  labels.json  open-close-smoke.md  pull_request_template.md
Certificación-ISO/: README.md
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  DOCUMENT_LOCALE_MAP.md  GLOSSARY.md  I18N_DOCUMENTATION.md  I18N_STRATEGY.md  PRIVACY_DATA_MAP.md  README.md  SECURITY.md  THEMING.md  qa-audit-summary.md
e2e/: a11y-critical.spec.ts  critical-paths.spec.ts  smoke.spec.ts
perf/: k6-smoke.js
prisma/: schema.prisma  seed.ts  seedSuperAdmin.ts
scripts/: MIGRACION_PROGRAMA_VIEJO.md  _generate-referencias-02-table.mjs  bootstrap-superadmin.ts  check-docs-locale-map.ts  check-i18n.ts  check-openapi.ts  emit-full-locale-map-rows.mjs  emit-locale-map-rows.mjs  extract-openapi-schemas.ts  generate-iso-controlled-docs.mjs  generate-openapi-markdown.ts  inspect-dbf-all.ts  inspect-dbf.ts  iso-doc-registry.mjs  merge-localized-iso-index.mjs  migrate-from-dbf.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+754 files in other folders)
