[package]
name = "bizcode"
version = "0.1.0"
description = "Sistema de Gestión Comercial"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
prisma-client-rust = { version = "0.6" }

[target.'cfg(not(dev))'.dependencies]
tauri-build = { version = "1.6", features = [] }

[profile.release]
lto = true
opt-level = 3
